
[TestResolve/complex - 1]
complex 9.9.9
├─ reg|KnownAs="chuck"|Selector="" | alice@^1.0.0 1.0.1
│  └─ $1@^2.0.0
├─ 1: reg|Selector="" | bob@2.2.2 2.2.2
└─ reg|Selector="" | dave@~3.3.3 3.3.3
   ├─ $1@^2.2.2
   └─ reg|KnownAs="duck"|Selector="" | chuck@^2.0.0 2.0.0
      └─ $1@^2.0.1

---

[TestResolve/complex - 2]
[
  {
    "ID": "CMPLX-0000-0000",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 1,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "complex",
              "VersionType": 1,
              "Version": "9.9.9"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "alice",
              "VersionType": 1,
              "Version": "1.0.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  },
  {
    "ID": "CMPLX-1000-0000",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 2,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "complex",
              "VersionType": 1,
              "Version": "9.9.9"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "2.2.2",
                "Type": {}
              },
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 0,
                "To": 3,
                "Requirement": "~3.3.3",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "alice",
              "VersionType": 1,
              "Version": "1.0.1"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 1,
                "To": 2,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "bob",
              "VersionType": 1,
              "Version": "2.2.2"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "2.2.2",
                "Type": {}
              },
              {
                "From": 1,
                "To": 2,
                "Requirement": "^2.0.0",
                "Type": {}
              },
              {
                "From": 3,
                "To": 2,
                "Requirement": "^2.2.2",
                "Type": {}
              },
              {
                "From": 4,
                "To": 2,
                "Requirement": "^2.0.1",
                "Type": {}
              }
            ],
            "Children": null
          },
          "3": {
            "Version": {
              "System": 3,
              "Name": "dave",
              "VersionType": 1,
              "Version": "3.3.3"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 3,
                "Requirement": "~3.3.3",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 3,
                "To": 2,
                "Requirement": "^2.2.2",
                "Type": {}
              },
              {
                "From": 3,
                "To": 4,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "4": {
            "Version": {
              "System": 3,
              "Name": "chuck",
              "VersionType": 1,
              "Version": "2.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 3,
                "To": 4,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 4,
                "To": 2,
                "Requirement": "^2.0.1",
                "Type": {}
              }
            ]
          }
        }
      }
    ]
  },
  {
    "ID": "CMPLX-2000-0000",
    "DevOnly": true,
    "Subgraphs": [
      {
        "Dependency": 4,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "complex",
              "VersionType": 1,
              "Version": "9.9.9"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 3,
                "Requirement": "~3.3.3",
                "Type": {}
              }
            ]
          },
          "3": {
            "Version": {
              "System": 3,
              "Name": "dave",
              "VersionType": 1,
              "Version": "3.3.3"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 3,
                "Requirement": "~3.3.3",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 3,
                "To": 4,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "4": {
            "Version": {
              "System": 3,
              "Name": "chuck",
              "VersionType": 1,
              "Version": "2.0.0"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 3,
                "To": 4,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  }
]
---

[TestResolve/diamond - 1]
diamond 1.0.0
├─ reg|Selector="" | pkg@^1.0.0 1.0.0
│  └─ 1: reg|Selector="" | bad@^1.0.0 1.1.1
└─ reg|Selector="" | dep-one@^1.0.0 1.0.0
   ├─ $1@^1.0.0
   └─ reg|Selector="" | dep-two@^1.0.0 1.0.0
      └─ $1@^1.0.0

---

[TestResolve/diamond - 2]
[
  {
    "ID": "DIA-000-000",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 3,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "diamond",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 0,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "pkg",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 1,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "dep-one",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 2,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 2,
                "To": 4,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "3": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 1,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 2,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 4,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          },
          "4": {
            "Version": {
              "System": 3,
              "Name": "dep-two",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 2,
                "To": 4,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 4,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          }
        }
      }
    ]
  }
]
---

[TestResolve/different-pkgs - 1]
different-pkgs 3.0.0
├─ reg|Selector="" | bad2@^1.0.0 1.0.0
└─ reg|Selector="" | dependency@^1.0.0 1.0.0
   └─ reg|Selector="" | bad@^1.0.0 1.1.1

---

[TestResolve/different-pkgs - 2]
[
  {
    "ID": "OSV-000-000",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 3,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "different-pkgs",
              "VersionType": 1,
              "Version": "3.0.0"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 2,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "3": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 2,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  },
  {
    "ID": "OSV-000-001",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 1,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "different-pkgs",
              "VersionType": 1,
              "Version": "3.0.0"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "bad2",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      },
      {
        "Dependency": 3,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "different-pkgs",
              "VersionType": 1,
              "Version": "3.0.0"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 2,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "3": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 2,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  }
]
---

[TestResolve/direct - 1]
direct 1.0.0
└─ reg|Selector="" | bad@^2.0.0 2.2.2

---

[TestResolve/direct - 2]
[
  {
    "ID": "OSV-000-001",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 1,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "direct",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "2.2.2"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  }
]
---

[TestResolve/duplicates - 1]
duplicates 1.1.1
├─ reg|KnownAs="bad-aliased"|Selector="" | bad@^1.0.0 1.1.1
├─ reg|Selector="" | dependency@^2.0.0 2.0.0
│  └─ reg|Selector="" | bad@^2.0.0 2.2.2
└─ reg|KnownAs="dependency-v1"|Selector="" | dependency@^1.0.0 1.0.0
   └─ reg|Selector="" | bad@^1.0.0 1.1.1

---

[TestResolve/duplicates - 2]
[
  {
    "ID": "OSV-000-000",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 1,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "duplicates",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      },
      {
        "Dependency": 5,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "duplicates",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "3": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 3,
                "To": 5,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "5": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 3,
                "To": 5,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  },
  {
    "ID": "OSV-000-001",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 1,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "duplicates",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      },
      {
        "Dependency": 4,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "duplicates",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "2.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 2,
                "To": 4,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "4": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "2.2.2"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 2,
                "To": 4,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      },
      {
        "Dependency": 5,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "duplicates",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "3": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 3,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 3,
                "To": 5,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "5": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 3,
                "To": 5,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  }
]
---

[TestResolve/existing - 1]
existing 1.0.0
└─ opt|Selector="" | dependency@^2.0.0 2.0.0
   └─ reg|Selector="" | bad@^2.0.0 2.2.2

---

[TestResolve/existing - 2]
[
  {
    "ID": "OSV-000-001",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 2,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "existing",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "2.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 1,
                "To": 2,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "2.2.2"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 1,
                "To": 2,
                "Requirement": "^2.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  }
]
---

[TestResolve/non-problem - 1]
non-problem 1.0.0
├─ 1: reg|Selector="" | bad@^1.0.0 1.1.1
└─ reg|Selector="" | dependency@^3.0.0 3.0.0
   └─ $1@*

---

[TestResolve/non-problem - 2]
[
  {
    "ID": "OSV-000-000",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 1,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "non-problem",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 0,
                "To": 2,
                "Requirement": "^3.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 2,
                "To": 1,
                "Requirement": "*",
                "Type": {}
              }
            ],
            "Children": null
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "3.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^3.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 2,
                "To": 1,
                "Requirement": "*",
                "Type": {}
              }
            ]
          }
        }
      }
    ]
  },
  {
    "ID": "OSV-000-001",
    "DevOnly": false,
    "Subgraphs": [
      {
        "Dependency": 1,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "non-problem",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 0,
                "To": 2,
                "Requirement": "^3.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              },
              {
                "From": 2,
                "To": 1,
                "Requirement": "*",
                "Type": {}
              }
            ],
            "Children": null
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "3.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 2,
                "Requirement": "^3.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 2,
                "To": 1,
                "Requirement": "*",
                "Type": {}
              }
            ]
          }
        }
      }
    ]
  }
]
---

[TestResolve/simple - 1]
simple 1.0.0
└─ reg|Selector="" | dependency@^1.0.0 1.0.0
   └─ reg|Selector="" | bad@^1.0.0 1.1.1

---

[TestResolve/simple - 2]
[
  {
    "ID": "OSV-000-000",
    "DevOnly": true,
    "Subgraphs": [
      {
        "Dependency": 2,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "simple",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 1,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 1,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  },
  {
    "ID": "OSV-000-001",
    "DevOnly": true,
    "Subgraphs": [
      {
        "Dependency": 2,
        "Nodes": {
          "0": {
            "Version": {
              "System": 3,
              "Name": "simple",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 2,
            "Parents": null,
            "Children": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "1": {
            "Version": {
              "System": 3,
              "Name": "dependency",
              "VersionType": 1,
              "Version": "1.0.0"
            },
            "Distance": 1,
            "Parents": [
              {
                "From": 0,
                "To": 1,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": [
              {
                "From": 1,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ]
          },
          "2": {
            "Version": {
              "System": 3,
              "Name": "bad",
              "VersionType": 1,
              "Version": "1.1.1"
            },
            "Distance": 0,
            "Parents": [
              {
                "From": 1,
                "To": 2,
                "Requirement": "^1.0.0",
                "Type": {}
              }
            ],
            "Children": null
          }
        }
      }
    ]
  }
]
---
